crates/ruff_python_parser/tests/snapshots/invalid_syntax@type_param_type_var_invalid_default_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/type_param_type_var_invalid_default_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(
            69,
        ),
        range: 0..163,
        body: [
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        10,
                    ),
                    range: 0..22,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                1,
                            ),
                            range: 5..6,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 6..16,
                            node_index: NodeIndex(
                                7,
                            ),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 7..15,
                                        node_index: NodeIndex(
                                            6,
                                        ),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 7..8,
                                            node_index: NodeIndex(
                                                2,
                                            ),
                                        },
                                        bound: None,
                                        default: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(
                                                        5,
                                                    ),
                                                    range: 11..15,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(
                                                                4,
                                                            ),
                                                            range: 12..15,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                9,
                            ),
                            range: 19..22,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        21,
                    ),
                    range: 23..48,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                12,
                            ),
                            range: 28..29,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 29..42,
                            node_index: NodeIndex(
                                18,
                            ),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 30..41,
                                        node_index: NodeIndex(
                                            17,
                                        ),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 30..31,
                                            node_index: NodeIndex(
                                                13,
                                            ),
                                        },
                                        bound: None,
                                        default: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(
                                                        16,
                                                    ),
                                                    range: 34..41,
                                                    value: Some(
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(
                                                                    15,
                                                                ),
                                                                range: 40..41,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                20,
                            ),
                            range: 45..48,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        32,
                    ),
                    range: 49..76,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                23,
                            ),
                            range: 54..55,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 55..70,
                            node_index: NodeIndex(
                                29,
                            ),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 56..69,
                                        node_index: NodeIndex(
                                            28,
                                        ),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 56..57,
                                            node_index: NodeIndex(
                                                24,
                                            ),
                                        },
                                        bound: None,
                                        default: Some(
                                            Yield(
                                                ExprYield {
                                                    node_index: NodeIndex(
                                                        27,
                                                    ),
                                                    range: 61..68,
                                                    value: Some(
                                                        Name(
                                                            ExprName {
                                                                node_index: NodeIndex(
                                                                    26,
                                                                ),
                                                                range: 67..68,
                                                                id: Name("x"),
                                                                ctx: Load,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                31,
                            ),
                            range: 73..76,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        43,
                    ),
                    range: 77..107,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                34,
                            ),
                            range: 82..83,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 83..101,
                            node_index: NodeIndex(
                                40,
                            ),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 84..100,
                                        node_index: NodeIndex(
                                            39,
                                        ),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 84..85,
                                            node_index: NodeIndex(
                                                35,
                                            ),
                                        },
                                        bound: None,
                                        default: Some(
                                            YieldFrom(
                                                ExprYieldFrom {
                                                    node_index: NodeIndex(
                                                        38,
                                                    ),
                                                    range: 88..100,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(
                                                                37,
                                                            ),
                                                            range: 99..100,
                                                            id: Name("x"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                42,
                            ),
                            range: 104..107,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        55,
                    ),
                    range: 108..134,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                45,
                            ),
                            range: 113..114,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 114..128,
                            node_index: NodeIndex(
                                52,
                            ),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 115..120,
                                        node_index: NodeIndex(
                                            49,
                                        ),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 115..116,
                                            node_index: NodeIndex(
                                                46,
                                            ),
                                        },
                                        bound: None,
                                        default: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(
                                                        48,
                                                    ),
                                                    range: 119..120,
                                                    id: Name("x"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 124..127,
                                        node_index: NodeIndex(
                                            51,
                                        ),
                                        name: Identifier {
                                            id: Name("int"),
                                            range: 124..127,
                                            node_index: NodeIndex(
                                                50,
                                            ),
                                        },
                                        bound: None,
                                        default: None,
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                54,
                            ),
                            range: 131..134,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            TypeAlias(
                StmtTypeAlias {
                    node_index: NodeIndex(
                        68,
                    ),
                    range: 135..162,
                    name: Name(
                        ExprName {
                            node_index: NodeIndex(
                                57,
                            ),
                            range: 140..141,
                            id: Name("X"),
                            ctx: Store,
                        },
                    ),
                    type_params: Some(
                        TypeParams {
                            range: 141..156,
                            node_index: NodeIndex(
                                65,
                            ),
                            type_params: [
                                TypeVar(
                                    TypeParamTypeVar {
                                        range: 142..155,
                                        node_index: NodeIndex(
                                            64,
                                        ),
                                        name: Identifier {
                                            id: Name("T"),
                                            range: 142..143,
                                            node_index: NodeIndex(
                                                58,
                                            ),
                                        },
                                        bound: Some(
                                            Name(
                                                ExprName {
                                                    node_index: NodeIndex(
                                                        60,
                                                    ),
                                                    range: 145..148,
                                                    id: Name("int"),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        default: Some(
                                            Starred(
                                                ExprStarred {
                                                    node_index: NodeIndex(
                                                        63,
                                                    ),
                                                    range: 151..155,
                                                    value: Name(
                                                        ExprName {
                                                            node_index: NodeIndex(
                                                                62,
                                                            ),
                                                            range: 152..155,
                                                            id: Name("int"),
                                                            ctx: Load,
                                                        },
                                                    ),
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(
                                67,
                            ),
                            range: 159..162,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | type X[T = *int] = int
  |            ^^^^ Syntax Error: Starred expression cannot be used here
2 | type X[T = yield x] = int
3 | type X[T = (yield x)] = int
  |


  |
1 | type X[T = *int] = int
2 | type X[T = yield x] = int
  |            ^^^^^^^ Syntax Error: Yield expression cannot be used here
3 | type X[T = (yield x)] = int
4 | type X[T = yield from x] = int
  |


  |
2 | type X[T = yield x] = int
3 | type X[T = (yield x)] = int
4 | type X[T = yield from x] = int
  |            ^^^^^^^^^^^^ Syntax Error: Yield expression cannot be used here
5 | type X[T = x := int] = int
6 | type X[T: int = *int] = int
  |


  |
3 | type X[T = (yield x)] = int
4 | type X[T = yield from x] = int
5 | type X[T = x := int] = int
  |              ^^ Syntax Error: Expected ',', found ':='
6 | type X[T: int = *int] = int
  |


  |
4 | type X[T = yield from x] = int
5 | type X[T = x := int] = int
6 | type X[T: int = *int] = int
  |                 ^^^^ Syntax Error: Starred expression cannot be used here
  |


## Semantic Syntax Errors

  |
1 | type X[T = *int] = int
2 | type X[T = yield x] = int
  |            ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVar default
3 | type X[T = (yield x)] = int
4 | type X[T = yield from x] = int
  |


  |
1 | type X[T = *int] = int
2 | type X[T = yield x] = int
3 | type X[T = (yield x)] = int
  |             ^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVar default
4 | type X[T = yield from x] = int
5 | type X[T = x := int] = int
  |


  |
2 | type X[T = yield x] = int
3 | type X[T = (yield x)] = int
4 | type X[T = yield from x] = int
  |            ^^^^^^^^^^^^ Syntax Error: yield expression cannot be used within a TypeVar default
5 | type X[T = x := int] = int
6 | type X[T: int = *int] = int
  |
